# pyFakeCustomers

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.py
src/FakeCustomers/customers/: bank.py  base.py
src/FakeCustomers/populateData/: populate.py
tests/: testBank.py  testDefault.py  testPopulate.py
