[build-system]
requires = ['numpy', 'faker']

[project]
name = "FakeCustomers"
version = "0.1.0"
authors = [
    {name="Carlos Granados", email="carlosm.granadosc@gmail.com"},
]
description = "A Package to use Faker in order to create a set of fake users"
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]